--- a/index.html
+++ b/index.html
@@ -1,11 +1,3 @@
-<!-- 
-    Done:
-    v header
-    v footer
-    x main-page
-
-
- -->
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -22,7 +14,7 @@
                 <img src="" alt="" class="logo__pic">
             </a>
             <nav class="menu">
-                <ul>
+                <ul class="menu__list">
                     <li class="menu__item">
                         <a href="" class="menu__title">Главная</a>
                     </li>
@@ -44,69 +36,63 @@
             <div class="intro">
                 <h1 class="intro__header">Интеллектуальный вечер для шумной компании</h1>
                 <div class="intro__desc">Игры на любой вкус</div>
-                <nav class="more">  
-                    <img src="" alt="" class="more__bg">
-                    <a href="" class="more__text">Подробнее</a>
-                </nav>
+                <a href="" class="more__text">Подробнее</a>
             </div>
 
             <div class="news">
                 <div class="news__header">
                     <h2 class="news__name">Новинки недели</h2>
-                    <img src="" alt="" class="news__icon">
+                    <img src="" alt="" class="news__pic">
                 </div>
                <nav class="news__games">
-                <ul>
-                    <li class="game__card">
-                        <img src="" alt="" class="game__pic">
-                        <h3 class="game__name">Музыкальная игра</h3>
-                        <div class="game__feature" id="time">
-                            <img src="" alt="" class="feature__icon">
-                            <div class="feature__text">90 минут</div>
+                <ul class="news__list">
+                    <li class="news__card">
+                        <img src="" alt="" class="news__bg">
+                        <div class="news__content">
+                            <h3 class="news__name">Музыкальная игра</h3>
+                            <div class="news__feature" id="time">
+                                <img src="" alt="" class="news__icon">
+                                <div class="news__text">90 минут</div>
+                            </div>
+                            <div class="news__feature" id="questions">
+                                <img src="" alt="" class="news__icon">
+                                <div class="news__text">70 вопросов</div>
+                            </div>
+                            <p class="news__desc">Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового участия</p>
+                            <a href="" class="news__more">Смотреть</a>
                         </div>
-                        <div class="game__feature" id="questions">
-                            <img src="" alt="" class="feature__icon">
-                            <div class="feature__text">70 вопросов</div>
-                        </div>
-                        <p class="game__desc">Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового участия</p>
-                        <nav class="more">  
-                            <img src="" alt="" class="more__bg">
-                            <a href="" class="more__text">Смотреть</a>
-                        </nav>
                     </li>
-                    <li class="games__card">
-                        <img src="" alt="" class="game__pic">
-                        <h3 class="game__name">Назад в 90-е</h3>
-                        <div class="game__feature" id="time">
-                            <img src="" alt="" class="feature__icon">
-                            <div class="feature__text">90 минут</div>
+                    <li class="news__card">
+                        <img src="" alt="" class="news__bg">
+                        <div class="news__content">
+                            <h3 class="news__name">Назад в 90-е</h3>
+                            <div class="news__feature" id="time">
+                                <img src="" alt="" class="news__icon">
+                                <div class="news__text">90 минут</div>
+                            </div>
+                            <div class="news__feature" id="questions">
+                                <img src="" alt="" class="news__icon">
+                                <div class="news__text">70 вопросов</div>
+                            </div>
+                            <p class="news__desc">Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового участия</p>
+                            <a href="" class="news__more">Смотреть</a>
                         </div>
-                        <div class="game__feature" id="questions">
-                            <img src="" alt="" class="feature__icon">
-                            <div class="feature__text">70 вопросов</div>
-                        </div>
-                        <p class="game__desc">Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового участия</p>
-                        <nav class="more">  
-                            <img src="" alt="" class="more__bg">
-                            <a href="" class="more__text">Смотреть</a>
-                        </nav>
                     </li>
-                    <li class="games__card">
-                        <img src="" alt="" class="game__pic">
-                        <h3 class="game__name">IT-викторина</h3>
-                        <div class="game__feature" id="time">
-                            <img src="" alt="" class="feature__icon">
-                            <div class="feature__text">90 минут</div>
+                    <li class="news__card">
+                        <img src="" alt="" class="news__bg">
+                        <div class="news__content">
+                            <h3 class="news__name">IT-Викторина</h3>
+                            <div class="news__feature" id="time">
+                                <img src="" alt="" class="news__icon">
+                                <div class="news__text">90 минут</div>
+                            </div>
+                            <div class="news__feature" id="questions">
+                                <img src="" alt="" class="news__icon">
+                                <div class="news__text">70 вопросов</div>
+                            </div>
+                            <p class="news__desc">Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового участия</p>
+                            <a href="" class="news__more">Смотреть</a>
                         </div>
-                        <div class="game__feature" id="questions">
-                            <img src="" alt="" class="feature__icon">
-                            <div class="feature__text">70 вопросов</div>
-                        </div>
-                        <p class="game__desc">Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового участия</p>
-                        <nav class="more">  
-                            <img src="" alt="" class="more__bg">
-                            <a href="" class="more__text">Смотреть</a>
-                        </nav>
                     </li>
                 </ul>
                </nav>
@@ -114,45 +100,42 @@
             <div class="done">
                 <h2 class="done__header">Прошедшие игры</h2>
                 <div class="done__body">
-                    <ul class="done__games">
-                        <li class="div done__card">
-                            <img src="" alt="" class="card__image">
-                            <div class="card__date">1 января</div>
-                            <h3 class="card__name">Новогодний квиз</h3>
-                            <div class="card__comment">Успевайте забронировать даты. Пока еще есть места на декабрь. Удачи и всех благ!</div>
+                    <ul class="done__list">
+                        <li class="done__card">
+                            <img src="" alt="" class="done__bg">
+                            <div class="done__date">1 января</div>
+                            <h3 class="done__name">Новогодний квиз</h3>
+                            <div class="done__comment">Успевайте забронировать даты. Пока еще есть места на декабрь. Удачи и всех благ!</div>
                         </li>
-                        <li class="div done__card">
-                            <img src="" alt="" class="card__image">
-                            <div class="card__date">8 марта</div>
-                            <h3 class="card__name">Весенняя игра</h3>
-                            <div class="card__comment">Успевайте забронировать даты. Пока еще есть места на декабрь. Удачи и всех благ!</div>
+                        <li class="done__card">
+                            <img src="" alt="" class="done__bg">
+                            <div class="done__date">8 марта</div>
+                            <h3 class="done__name">Весенняя игра</h3>
+                            <div class="done__comment">Успевайте забронировать даты. Пока еще есть места на декабрь. Удачи и всех благ!</div>
                         </li>
                     </ul>
-                    <nav class="done__pages">
-                        <div class="pages__current">Страница n из 7</div>
-                        <ul class="">
-                            <li class="pages_list"><a href="" class="page">1</a></li>
-                            <li class="pages_list"><a href="" class="page">2</a></li>
-                            <li class="pages_list"><a href="" class="page">3</a></li>
-                            <li class="pages_list"><a href="" class="page">4</a></li>
-                            <li class="pages_list"><a href="" class="page">5</a></li>
-                            <li class="pages_list"><a href="" class="page">6</a></li>
-                            <li class="pages_list"><a href="" class="page">7</a></li>
-                        </ul>
-                    </nav>
+                </div>
+                <div class="done__paginator">
+                    <div class="done__current">Страница 1 из 7</div>
+                    <ul class="done__pages">
+                        <li class="done__number"><a href="" class="done__link">1</a></li>
+                        <li class="done__number"><a href="" class="done__link">2</a></li>
+                        <li class="done__number"><a href="" class="done__link">3</a></li>
+                        <li class="done__number"><a href="" class="done__link">4</a></li>
+                        <li class="done__number"><a href="" class="done__link">5</a></li>
+                        <li class="done__number"><a href="" class="done__link">6</a></li>
+                        <li class="done__number"><a href="" class="done__link">7</a></li>
+                    </ul>
                 </div>
             </div>
             <div class="about">
-                <img src="" alt="" class="about__bg">
+                <img src="" alt="" class="about__pic">
                 <div class="about__box">
-                    <h2 class="box__header">О нас</h2>
-                    <img src="" alt="" class="box__bg">
-                    <p class="box__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem perspiciatis, voluptatem ad quae nesciunt asperiores ratione quasi officiis aperiam fugit recusandae, in dolor? Hic qui sed atque sunt, sit delectus.
+                    <h2 class="about__header">О нас</h2>
+                    <img src="" alt="" class="about__bg">
+                    <p class="about__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem perspiciatis, voluptatem ad quae nesciunt asperiores ratione quasi officiis aperiam fugit recusandae, in dolor? Hic qui sed atque sunt, sit delectus.
                     </p>
-                    <nav class="more" id="about">  
-                        <img src="" alt="" class="more__bg">
-                        <a href="" class="more__text">Подробнее</a>
-                    </nav>
+                    <a href="" class="about__more">Подробнее</a>
                 </div>
             </div>
         </div>
@@ -162,7 +145,7 @@
                 <img src="" alt="" class="logo__pic">
             </a>
             <nav class="menu">
-                <ul>
+                <ul class="menu__list">
                     <li class="menu__item">
                         <a href="" class="menu__title">Главная</a>
                     </li>
@@ -174,8 +157,8 @@
                     </li>
                 </ul>
             </nav>
-            <address class="socials">
-                <ul>
+            <div class="socials">
+                <ul class="socials__list">
                     <li class="socials__item">
                         <a href="" class="socials__logo">
                             <img src="" alt="" class="socials__pic">
@@ -197,7 +180,7 @@
                         </a>
                     </li>
                 </ul>
-            </address>
+            </div>
             <address class="contacts">
                 <a href="tel:+78007003030" class="contacts__phone">8(800)7003030</a>
                 <div class="contacts__workhours">График работы</div>
