--- a/index.html
+++ b/index.html
@@ -8,27 +8,26 @@
 </head>
 <body>
     <div class="wrapper">
-
         <header class="header">
-            <a href="" class="logo">
-                <img src="" alt="" class="logo__pic">
+            <a href="" class="header__logo">
+                <img src="" alt="" class="header__pic">
             </a>
-            <nav class="menu">
-                <ul class="menu__list">
-                    <li class="menu__item">
-                        <a href="" class="menu__title">Главная</a>
+            <nav class="header__menu">
+                <ul class="header__list">
+                    <li class="header__item">
+                        <a href="" class="header__title">Главная</a>
                     </li>
-                    <li class="menu__item">
-                        <a href="" class="menu__title">Игры</a>
+                    <li class="header__item">
+                        <a href="" class="header__title">Игры</a>
                     </li>
-                    <li class="menu__item">
-                        <a href="" class="menu__title">Отзывы</a>
+                    <li class="header__item">
+                        <a href="" class="header__title">Отзывы</a>
                     </li>
                 </ul>
             </nav>
-            <address class="contacts">
-                <a href="tel:+78007003030" class="contacts__phone">8(800)7003030</a>
-                <div class="contacts__workhours">График работы</div>
+            <address class="header__contacts">
+                <a href="tel:+78007003030" class="header__phone">8(800)7003030</a>
+                <div class="header__workhours">График работы</div>
             </address>
         </header>
 
@@ -36,7 +35,7 @@
             <div class="intro">
                 <h1 class="intro__header">Интеллектуальный вечер для шумной компании</h1>
                 <div class="intro__desc">Игры на любой вкус</div>
-                <a href="" class="more__text">Подробнее</a>
+                <a href="" class="intro__text">Подробнее</a>
             </div>
 
             <div class="news">
@@ -44,7 +43,7 @@
                     <h2 class="news__name">Новинки недели</h2>
                     <img src="" alt="" class="news__pic">
                 </div>
-               <nav class="news__games">
+               <div class="news__games">
                 <ul class="news__list">
                     <li class="news__card">
                         <img src="" alt="" class="news__bg">
@@ -95,7 +94,7 @@
                         </div>
                     </li>
                 </ul>
-               </nav>
+               </div>
             </div>
             <div class="done">
                 <h2 class="done__header">Прошедшие игры</h2>
@@ -141,49 +140,49 @@
         </div>
 
         <footer class="footer">
-            <a href="" class="logo">
-                <img src="" alt="" class="logo__pic">
+            <a href="" class="footer__logo">
+                <img src="" alt="" class="footer__pic">
             </a>
-            <nav class="menu">
-                <ul class="menu__list">
-                    <li class="menu__item">
-                        <a href="" class="menu__title">Главная</a>
+            <nav class="footer__menu">
+                <ul class="footer__list">
+                    <li class="footer__item">
+                        <a href="" class="footer__title">Главная</a>
                     </li>
-                    <li class="menu__item">
-                        <a href="" class="menu__title">Игры</a>
+                    <li class="footer__item">
+                        <a href="" class="footer__title">Игры</a>
                     </li>
-                    <li class="menu__item">
-                        <a href="" class="menu__title">Отзывы</a>
+                    <li class="footer__item">
+                        <a href="" class="footer__title">Отзывы</a>
                     </li>
                 </ul>
             </nav>
-            <div class="socials">
-                <ul class="socials__list">
-                    <li class="socials__item">
-                        <a href="" class="socials__logo">
-                            <img src="" alt="" class="socials__pic">
+            <div class="footer__socials">
+                <ul class="footer__socials-list">
+                    <li class="footer__socials-item">
+                        <a href="" class="footer__socials-logo">
+                            <img src="" alt="" class="footer__socials-pic">
                         </a>
                     </li>
-                    <li class="socials__item">
-                        <a href="" class="socials__logo">
-                            <img src="" alt="" class="socials__pic">
+                    <li class="footer__socials-item">
+                        <a href="" class="footer__socials-logo">
+                            <img src="" alt="" class="footer__socials-pic">
                         </a>
                     </li>
-                    <li class="socials__item">
-                        <a href="" class="socials__logo">
-                            <img src="" alt="" class="socials__pic">
+                    <li class="footer__socials-item">
+                        <a href="" class="footer__socials-logo">
+                            <img src="" alt="" class="footer__socials-pic">
                         </a>
                     </li>
-                    <li class="socials__item">
-                        <a href="" class="socials__logo">
-                            <img src="" alt="" class="socials__pic">
+                    <li class="footer__socials-item">
+                        <a href="" class="footer__socials-logo">
+                            <img src="" alt="" class="footer__socials-pic">
                         </a>
                     </li>
                 </ul>
             </div>
-            <address class="contacts">
-                <a href="tel:+78007003030" class="contacts__phone">8(800)7003030</a>
-                <div class="contacts__workhours">График работы</div>
+            <address class="footer__contacts">
+                <div class="footer__comment">Бесплатный звонок по России</div>
+                <a href="tel:+78007003030" class="footer__phone">8(800)7003030</a>
             </address>
         </footer>
     </div>
