--- a/index.html
+++ b/index.html
@@ -9,29 +9,28 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="background">
-            <img src="" alt="" class="background__pic">
-        </div>
         <div class="container">
             <header class="header">
-                <a href="" class="header__logo">
-                    Quiz-box
-                </a>
+                <div class="header__logo">
+                    <a href="" class="logo">
+                        Quiz-box
+                    </a>
+                </div>
                 <nav class="header__menu">
-                        <ul class="header__list">
-                            <li class="header__item">
-                                <a href="" class="header__title">Главная</a>
+                        <ul class="menu">
+                            <li class="menu__item">
+                                <a href="" class="menu__title">Главная</a>
                             </li>
-                            <li class="header__item">
-                                <a href="" class="header__title">Игры</a>
+                            <li class="menu__item">
+                                <a href="" class="menu__title">Игры</a>
                             </li>
-                            <li class="header__item">
-                                <a href="" class="header__title">Отзывы</a>
+                            <li class="menu__item">
+                                <a href="" class="menu__title">Отзывы</a>
                             </li>
                         </ul>
                 </nav>
                 <div class="header__contacts">
-                    <a href="tel:+78007003030" class="header__phone">8 800 700 30 30</a>
+                    <a href="tel:+78007003030" class="phone">8 800 700 30 30</a>
                     <div class="header__workhours">График работы</div>
                 </div>
             </header>
@@ -39,13 +38,12 @@
                 <div class="intro">
                     <h1 class="intro__header">Интеллектуальный вечер для шумной компании</h1>
                     <div class="intro__desc">Игры на любой вкус</div>
-                    <div class="intro__more">
-                        <button class="intro__button">Подробнее                      </button>
-                    </div>
+                    <button class="button intro__button">Подробнее                      </button>
                 </div>
                 <div class="news">
                     <div class="news__header">
                         <h2 class="news__title">Новинки недели</h2>
+                        <img src="pictures/news.png" alt="" class="news__icon">
                     </div>
                    <div class="news__games">
                     <ul class="news__list">
@@ -54,15 +52,17 @@
                             <div class="news__content">
                                 <h3 class="news__name">Музыкальная игра</h3>
                                 <ul class="news__features">
-                                    <li class="news__feature-item" id="time">
-                                        <div class="news__text">90 минут</div>
+                                    <li class="feature">
+                                        <img src="pictures/clock.png" alt="" class="feature__icon">
+                                        <span class="feature__text">90 минут</span>
                                     </li>
-                                    <li class="news__feature-item" id="questions">
-                                        <div class="news__text">70 вопросов</div>
+                                    <li class="feature">
+                                        <img src="pictures/qa.png" alt="" class="feature__icon">
+                                        <span class="feature__text">70 вопросов</span>
                                     </li>
                                 </ul>
-                                <div class="news__desc">Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового участия</div>
-                                <div class="news__more"><button href="" class="news__button">Смотреть</button></div>
+                                <div class="news__desc">Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового участия.</div>
+                                <button href="" class="button news__button">Смотреть</button>
                             </div>
                         </li>
                         <li class="news__card">
@@ -70,15 +70,17 @@
                             <div class="news__content">
                                 <h3 class="news__name">Назад в 90-е</h3>
                                 <ul class="news__features">
-                                    <li class="news__feature-item" id="time">
-                                        <div class="news__text">90 минут</div>
+                                    <li class="feature">
+                                        <img src="pictures/clock.png" alt="" class="feature__icon">
+                                        <span class="feature__text">90 минут</span>
                                     </li>
-                                    <li class="news__feature-item" id="questions">
-                                        <div class="news__text">70 вопросов</div>
+                                    <li class="feature">
+                                        <img src="pictures/qa.png" alt="" class="feature__icon">
+                                        <span class="feature__text">70 вопросов</span>
                                     </li>
                                 </ul>
-                                <div class="news__desc">Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового участия</div>
-                                <div class="news__more"><button href="" class="news__button">Смотреть</button></div>
+                                <div class="news__desc">Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового участия.</div>
+                                <button href="" class="button news__button">Смотреть</button>
                             </div>
                         </li>
                         <li class="news__card">
@@ -86,15 +88,17 @@
                             <div class="news__content">
                                 <h3 class="news__name">IT-Викторина</h3>
                                 <ul class="news__features">
-                                    <li class="news__feature-item" >
-                                        <div class="news__text" >90 минут</div>
+                                    <li class="feature">
+                                        <img src="pictures/clock.png" alt="" class="feature__icon">
+                                        <span class="feature__text">90 минут</span>
                                     </li>
-                                    <li class="news__feature-item" >
-                                        <div class="news__text" id="questions">70 вопросов</div>
+                                    <li class="feature">
+                                        <img src="pictures/qa.png" alt="" class="feature__icon">
+                                        <span class="feature__text">70 вопросов</span>
                                     </li>
                                 </ul>
-                                <div class="news__desc">Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового участия</div>
-                                <div class="news__more"><button href="" class="news__button">Смотреть</button></div>
+                                <div class="news__desc">Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового участия.</div>
+                                <button href="" class="button news__button">Смотреть</button>
                             </div>
                         </li>
                     </ul>
@@ -105,87 +109,93 @@
                     <div class="done__body">
                         <ul class="done__list">
                             <li class="done__card">
-                                <img src="" alt="" class="done__bg">
-                                <div class="done__date">1 января</div>
-                                <h3 class="done__name">Новогодний квиз</h3>
-                                <div class="done__comment">Успевайте забронировать даты. Пока еще есть места на декабрь. Удачи и всех благ!</div>
+                                <img src="pictures/done_new_year.png" alt="" class="done__bg">
+                                <div class="done__content">
+                                    <div class="done__date">1 января</div>
+                                    <h3 class="done__name">Новогодний квиз</h3>
+                                    <div class="done__comment">Успевайте забронировать даты. Пока еще есть места на декабрь. Удачи и всех благ!</div>
+                                </div>
                             </li>
                             <li class="done__card">
-                                <img src="" alt="" class="done__bg">
-                                <div class="done__date">8 марта</div>
-                                <h3 class="done__name">Весенняя игра</h3>
-                                <div class="done__comment">Успевайте забронировать даты. Пока еще есть места на декабрь. Удачи и всех благ!</div>
+                                <img src="pictures/done_spring.png" alt="" class="done__bg">
+                                <div class="done__content">
+                                    <div class="done__date">8 марта</div>
+                                    <h3 class="done__name">Весенняя игра</h3>
+                                    <div class="done__comment">Успевайте забронировать даты. Пока еще есть места на декабрь. Удачи и всех благ!</div>
+                                </div>
                             </li>
                         </ul>
                     </div>
                     <div class="done__paginator">
-                        <div class="done__current">Страница 1 из 7</div>
-                        <ul class="done__pages">
-                            <li class="done__number"><a href="" class="done__link">1</a></li>
-                            <li class="done__number"><a href="" class="done__link">2</a></li>
-                            <li class="done__number"><a href="" class="done__link">3</a></li>
-                            <li class="done__number"><a href="" class="done__link">4</a></li>
-                            <li class="done__number"><a href="" class="done__link">5</a></li>
-                            <li class="done__number"><a href="" class="done__link">6</a></li>
-                            <li class="done__number"><a href="" class="done__link">7</a></li>
-                        </ul>
+                        <div class="paginator">
+                            <span class="current__page">Страница 1 из 7</span>
+                            <ul class="pages">
+                                <li class="page__item"><a href="" class="page__link">1</a></li>
+                                <li class="page__item"><a href="" class="page__link">2</a></li>
+                                <li class="page__item"><a href="" class="page__link">3</a></li>
+                                <li class="page__item"><a href="" class="page__link">4</a></li>
+                                <li class="page__item"><a href="" class="page__link">5</a></li>
+                                <li class="page__item"><a href="" class="page__link">6</a></li>
+                                <li class="page__item"><a href="" class="page__link">7</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <div class="about">
-                    <img src="" alt="" class="about__pic">
+                    <img src="pictures/about_bg.png" alt="" class="about__pic">
                     <div class="about__box">
                         <h2 class="about__header">О нас</h2>
-                        <img src="" alt="" class="about__bg">
                         <p class="about__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem perspiciatis, voluptatem ad quae nesciunt asperiores ratione quasi officiis aperiam fugit recusandae, in dolor? Hic qui sed atque sunt, sit delectus.
                         </p>
-                        <a href="" class="about__more">Подробнее</a>
+                        <button href="" class="button about__button">Подробнее</button>
                     </div>
                 </div>
             </div>
+            <hr class="line">
             <footer class="footer">
-                <a href="" class="footer__logo">
-                    Quiz-box
-                </a>
+                <div href="" class="footer__logo">
+                    <a href="" class="logo">Quiz-box</a>
+                </div>
                 <nav class="footer__menu">
-                    <ul class="footer__list">
-                        <li class="footer__item">
-                            <a href="" class="footer__title">Главная</a>
+                    <ul class="menu">
+                        <li class="menu__item">
+                            <a href="" class="menu__title">Главная</a>
                         </li>
-                        <li class="footer__item">
-                            <a href="" class="footer__title">Игры</a>
+                        <li class="menu__item">
+                            <a href="" class="menu__title">Игры</a>
                         </li>
-                        <li class="footer__item">
-                            <a href="" class="footer__title">Отзывы</a>
+                        <li class="menu__item">
+                            <a href="" class="menu__title">Отзывы</a>
                         </li>
                     </ul>
                 </nav>
                 <div class="footer__socials">
-                    <ul class="footer__socials-list">
-                        <li class="footer__socials-item">
-                            <a href="" class="footer__socials-icon">
-                                <img src="" alt="" class="footer__socials-pic">
+                    <ul class="socials">
+                        <li class="socials__item">
+                            <a href="" class="socials__icon">
+                                <img src="pictures/telegram.png" alt="" class="socials__pic">
                             </a>
                         </li>
-                        <li class="footer__socials-item">
-                            <a href="" class="footer__socials-icon">
-                                <img src="" alt="" class="footer__socials-pic">
+                        <li class="socials__item">
+                            <a href="" class="socials__icon">
+                                <img src="pictures/vk.png" alt="" class="socials__pic">
                             </a>
                         </li>
-                        <li class="footer__socials-item">
-                            <a href="" class="footer__socials-icon">
-                                <img src="" alt="" class="footer__socials-pic">
+                        <li class="socials__item">
+                            <a href="" class="socials__icon">
+                                <img src="pictures/f.png" alt="" class="socials__pic">
                             </a>
                         </li>
-                        <li class="footer__socials-item">
-                            <a href="" class="footer__socials-icon">
-                                <img src="" alt="" class="footer__socials-pic">
+                        <li class="socials__item">
+                            <a href="" class="socials__icon">
+                                <img src="pictures/in.png" alt="" class="socials__pic">
                             </a>
                         </li>
                     </ul>
                 </div>
                 <address class="footer__contacts">
                     <div class="footer__comment">Бесплатный звонок по России</div>
-                    <a href="tel:+78007003030" class="footer__phone">8 800 700 30 30</a>
+                    <a href="tel:+78007003030" class="phone">8 800 700 30 30</a>
                 </address>
             </footer>
         </div>
