games page added

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main</title>
+    <meta name="viewport" content="width=1168, initial-scale=1.0">
+    <title>Главная</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="normalize.css">
 </head>
 <body>
     <div class="wrapper">
@@ -19,10 +20,10 @@
                 <nav class="header__menu">
                         <ul class="menu">
                             <li class="menu__item">
-                                <a href="" class="menu__title">Главная</a>
+                                <a href="index.html" class="menu__title">Главная</a>
                             </li>
                             <li class="menu__item">
-                                <a href="" class="menu__title">Игры</a>
+                                <a href="reviews.html" class="menu__title">Игры</a>
                             </li>
                             <li class="menu__item">
                                 <a href="" class="menu__title">Отзывы</a>
