--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                                 <a href="index.html" class="menu__title">Главная</a>
                             </li>
                             <li class="menu__item">
-                                <a href="reviews.html" class="menu__title">Игры</a>
+                                <a href="games.html" class="menu__title">Игры</a>
                             </li>
                             <li class="menu__item">
                                 <a href="" class="menu__title">Отзывы</a>
