--- a/games.html
+++ b/games.html
@@ -14,32 +14,39 @@
         <div class="container hero__container">
             <header class="header">
                 <div class="header__logo">
-                    <a href="" class="logo">
+                    <a href="main.html" class="logo">
                         Quiz-box
                     </a>
                 </div>
                 <nav class="header__menu">
                         <ul class="menu">
                             <li class="menu__item">
-                                <a href="index.html" class="menu__title">Главная</a>
+                                <a href="main.html" class="menu__title">Главная</a>
                             </li>
                             <li class="menu__item">
                                 <a href="games.html" class="menu__title">Игры</a>
                             </li>
                             <li class="menu__item">
-                                <a href="" class="menu__title">Отзывы</a>
+                                <a href="reviews.html" class="menu__title">Отзывы</a>
                             </li>
                         </ul>
                 </nav>
                 <div class="header__contacts">
                     <a href="tel:+78007003030" class="phone">8 800 700 30 30</a>
-                    <div class="header__workhours">График работы</div>
+                    <div class="header__workhours dropdown">
+                        <a href="" class="dropdown__link">График работы</a>
+                        <div class="dropdown__content">
+                            <div class="dropdown__days">пн-вс: 09:00 - 20:00</div>
+                            <div class="dropdown__lunch">Обед: 14:00-14:30</div>
+                        </div>
+                        
+                    </div>
                 </div>
             </header>
             <h1 class="hero__title">Игры</h1>
             <div class="hero__breadcrumbs">
                 <ul class="breadcrumbs">
-                    <li class="breadcrumb__item"><a href="" class="breadcrumb__link">Главная</a></li>
+                    <li class="breadcrumb__item"><a href="main.html" class="breadcrumb__link">Главная</a></li>
                     <li class="breadcrumb__item"><a href="" class="breadcrumb__link">Услуги</a></li>
                 </ul>
             </div>
@@ -82,19 +89,19 @@
                     </div>
                 </div>
         </div>
-</div>
+    </div>
     <div class="partners">
         <div class="container partners__container">
             <h2 class="partners__title">Партнеры</h2>
             <ul class="partners__list">
-                <li class="partner"><img src="pictures/pobeda.png" alt="" class="patner__icon"></li>
-                <li class="partner"><img src="pictures/s7.png" alt="" class="patner__icon"></li>
-                <li class="partner"><img src="pictures/Vector.png" alt="" class="patner__icon"></li>
-                <li class="partner"><img src="pictures/g10 1.png" alt="" class="patner__icon"></li>
+                <li class="partner"><img src="pictures/pobeda.png" alt="" class="partner__icon"></li>
+                <li class="partner"><img src="pictures/s7.png" alt="" class="partner__icon"></li>
+                <li class="partner"><img src="pictures/Vector.png" alt="" class="partner__icon"></li>
+                <li class="partner"><img src="pictures/g10 1.png" alt="" class="partner__icon"></li>
                 <li class="partner"><img src="pictures/image__files_news_zenia_logotip_logo_kvestroom 1.png" alt="" class="patner__icon"></li>
-                <li class="partner"><img src="pictures/pegasus.png" alt="" class="patner__icon"></li>
-                <li class="partner"><img src="pictures/airbaltic.png" alt="" class="patner__icon"></li>
-                <li class="partner"><img src="pictures/pegas.png" alt="" class="patner__icon"></li>
+                <li class="partner"><img src="pictures/pegasus.png" alt="" class="partner__icon"></li>
+                <li class="partner"><img src="pictures/airbaltic.png" alt="" class="partner__icon"></li>
+                <li class="partner"><img src="pictures/pegas.png" alt="" class="partner__icon"></li>
             </ul>
         </div>
     </div>
@@ -117,28 +124,26 @@
                 </ul>
             </nav>
             <div class="footer__socials">
+        
                 <ul class="socials">
                     <li class="socials__item">
-                        <a href="" class="socials__icon">
-                            <img src="pictures/telegram.png" alt="" class="socials__pic">
+                        <a href="" class="socials__icon fb-icon">
                         </a>
                     </li>
                     <li class="socials__item">
-                        <a href="" class="socials__icon">
-                            <img src="pictures/vk.png" alt="" class="socials__pic">
+                        <a href="" class="socials__icon vk-icon">
                         </a>
                     </li>
                     <li class="socials__item">
-                        <a href="" class="socials__icon">
-                            <img src="pictures/f.png" alt="" class="socials__pic">
+                        <a href="" class="socials__icon tg-icon">
                         </a>
                     </li>
                     <li class="socials__item">
-                        <a href="" class="socials__icon">
-                            <img src="pictures/in.png" alt="" class="socials__pic">
+                        <a href="" class="socials__icon in-icon">
                         </a>
                     </li>
                 </ul>
+
             </div>
             <address class="footer__contacts">
                 <div class="footer__comment">Бесплатный звонок по России</div>
